[package]
name = "proseg"
description = "Probabilistic cell segmentation for in situ spatial transcriptomics"
version = "1.1.1"
edition = "2021"
authors = ["Daniel C. Jones <djones3@fredhutch.org>"]
repository = "https://github.com/dcjones/proseg"
readme = "README.md"
license-file = "LICENSE.md"


[[bin]]
name = "proseg"
path = "src/main.rs"

[[bin]]
name = "proseg-to-baysor"
path = "src/to_baysor.rs"

# [[bin]]
# name = "proseg-centroid-distance"
# path = "src/centroid_distance.rs"

[profile.release]
debug = false
# lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "52.2.0"
clap = { version = "4.3.3", features = ["derive"] }
csv = "1.2.2"
flate2 = "1.0.26"
geo = "0.28.0"
indicatif = "0.17.5"
itertools = "0.12.1"
json = "0.12.4"
kiddo = "4.2.0"
libm = "0.2.7"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-conv = "0.2.0"
num-traits = "0.2.17"
numeric_literals = "0.2.0"
parquet = "52.2.0"
petgraph = "0.6.3"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
thread_local = "1.1.7"
