[package]
name = "proseg"
description = "Probabilistic cell segmentation for in situ spatial transcriptomics"
version = "2.0.4"
edition = "2021"
authors = ["Daniel C. Jones <djones3@fredhutch.org>"]
repository = "https://github.com/dcjones/proseg"
readme = "README.md"
license-file = "LICENSE.md"


[[bin]]
name = "proseg"
path = "src/main.rs"

[[bin]]
name = "proseg-to-baysor"
path = "src/to_baysor.rs"

# [[bin]]
# name = "proseg-centroid-distance"
# path = "src/centroid_distance.rs"

[profile.release]
debug = false
# lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "54.2.1"
clap = { version = "4.3.3", features = ["derive"] }
csv = "1.2.2"
flate2 = "1.0.26"
geo = "0.28.0"
indicatif = "0.17.5"
itertools = "0.12.1"
json = "0.12.4"
kiddo = "4.2.0"
libm = "0.2.7"
ndarray = { version = "0.16.1", features = [
    "rayon",
    "matrixmultiply-threading",
] }
num-traits = "0.2.17"
numeric_literals = "0.2.0"
parquet = "54.2.1"
petgraph = "0.6.3"
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.7.0"
regex = "1.10.6"
thread_local = "1.1.7"
clustering = { version = "0.2.1", features = ["parallel"] }
linregress = "0.5.4"
