[package]
name = "proseg"
description = "Probabilistic cell segmentation for in situ spatial transcriptomics"
version = "3.0.12"
edition = "2024"
authors = ["Daniel C. Jones <djones3@fredhutch.org>"]
repository = "https://github.com/dcjones/proseg"
readme = "README.md"
license-file = "LICENSE.md"


[[bin]]
name = "proseg"
path = "src/main.rs"

[[bin]]
name = "proseg-to-baysor"
path = "src/to_baysor.rs"

[profile.release]
debug = true
# lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "54.2.1"
clap = { version = "4.3.3", features = ["derive"] }
csv = "1.2.2"
flate2 = "1.0.26"
geo = "0.31.0"
indicatif = "0.17.5"
itertools = "0.12.1"
json = "0.12.4"
libm = "0.2.7"
ndarray = { version = "0.16.1", features = [
    "rayon",
    "matrixmultiply-threading",
] }
numeric_literals = "0.2.0"
parquet = "54.2.1"
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.7.0"
regex = "1.10.6"
thread_local = "1.1.7"
clustering = { version = "0.2.1", features = ["parallel"] }
linregress = "0.5.4"
num = "0.4.3"
log = "0.4.27"
env_logger = "0.11.8"
dashmap = "6.1.0"
ordered-float = "5.0.0"
ndarray-npy = "0.9.1"
half = "2.6.0"
lazy_static = "1.5.0"
zarrs = "0.22.4"
serde_json = "1.0.140"
wkb = "0.9.0"
geo-traits = "0.3.0"
rstar = "0.12.2"
zarrs_zip = "0.3.0"
